--- a/packages/core/sidebar/Sidebar.module.css
+++ b/packages/core/sidebar/Sidebar.module.css
@@ -1,9 +1,9 @@
 .container {
     background-color: var(--black);
     width: var(--sidebar-w);
-    height: 100%;
+    height: calc(100% - var(--header-h));
     position: sticky;
     left: 0;
-    top: 0;
-    z-index: -1;
+    top: var(--header-h);
+    padding: 10px;
 }
