--- a/packages/core/sidebar/Sidebar.module.css
+++ b/packages/core/sidebar/Sidebar.module.css
@@ -2,8 +2,24 @@
     background-color: var(--black);
     width: var(--sidebar-w);
     height: calc(100% - var(--header-h));
-    position: sticky;
+    position: fixed;
     left: 0;
     top: var(--header-h);
     padding: 10px;
+}
+
+.listItem {
+    padding: 8px;
+    border-radius: 10px;
+    cursor: pointer;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 8px;
+    margin-bottom: 8px;
+    font-weight: 600;
+}
+
+.listItem:hover {
+    background-color: var(--dark);
 }
